	- Array Copy 및 Group, Ungroup의 기능의 오류를 수정함. 
	- 레이저 가공에서 Inposition Delay 파라미터 추가
	- Paint하는 모든 것을 Buffered graphics 처리함 (buffer에 그린 다음 한번에 Display)
	- Draw UI를 click시 Focus처리... (마우스 휠로 zoom 동작 문제 해결)
	
// Grade : ★★
// Date : 2017-01/19~20
// Context
 Scanner UI 동작 추가
	- Zoom 관련 해서 기능 추가 
	  특정 위치를 중심으로 Zoom In/Out 시 Field가 위치를 따라 가게 적용함.
	  Mouse Wheel로 Zoom In/Out 시 마우스 위치를 중심으로 Zoom이 되도록 함






////////////////////////////////////////////////////////////////////////////////////////////
// LHS
// Version : 0.0.1
// Grade : ★
// Date : 2016-03-07
// Context
1. MDataManager -> CSystemData -> Scanner ini Data 관리를 위한 Class 배열 선언.
2. MLWDicer -> CreatePolygonScanner() Scanner 갯수 만큼 Hardware Layer 생성하는 Function 추가. : Scanner Max 4 ea
3. UI - FormMessageBox 추가
4. UI - FormLaserMaint Scanner IP, Port 입력 추가

// Version : 0.0.2
// Grade : ★
// Date : 2016-03-21
// Context
// * Polygon Scanner Interface 보완
// 1. TFTP 통신 Protocol 추가
//   - InitializeTFTP()
//   - SendTFTPFile(string strIP, string strFilePath)
// 2. COM Serial 통신 Debugging 수정
//   - Event Handler 생성 해제 위치 변경
//   - Receive Event Byte 사이즈 Read로 변경
// 3. Scanner Interface Test를 위한 Manual UI 추가
//   - FormLaserMaint 
// 4. ImageSave 1빈트 단색 Bitmap 형식으로 저장하도록 수정

// Version : 0.0.3
// Grade : ★
// Date : 2016-03-28
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. IO Operation UI 추가
// 3. Excel IO List Load 추가
//  -  MDataManager -> LoadExcelIOList()
//  - IO List 경로 SFA\LWDicer\SystemData\LWDicer_IO_List.xlsx

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-04
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. Motor Parameter UI 추가 / Motor Parameter Excel File Load,Save 구문 추가
//  - MDataManager -> ExportMotorDataFromExcel(string [,] strParameter)
//  - Motor Data 경로 SFA\LWDicer\SystemData\SystemData.xlsx

// Version : 0.0.5
// Grade : ★
// Date : 2016-04-11
// Context
// * UI 변경
// 1. Scanner Image 편집 UI 추가

// Version : 0.0.6
// Grade : ★
// Date : 2016-04-27
// Context